fix(ZNTA-2371) fix height of panels in Dashboard so version options dropdown is visible

--- a/server/zanata-frontend/src/app/styles/gwt.less
+++ b/server/zanata-frontend/src/app/styles/gwt.less
@@ -134,4 +134,10 @@
     word-wrap: break-word;
     white-space: pre-wrap;
   }
+  .g.u-fullWidth {
+    height: 100vh;
+  }
+  #versions_form ul.dropdown__content li {
+    position: relative;
+  }
 }
